--- a/ArbeitsBlaetter/index.html
+++ b/ArbeitsBlaetter/index.html
@@ -62,6 +62,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: visible;
+      padding: 0;
     }
     .rotated-content {
       transform: rotate(90deg);
@@ -71,16 +73,19 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      padding: 20mm;
+      padding: 15mm;
       box-sizing: border-box;
-      overflow: hidden;
+      overflow: visible;
+      position: relative;
     }
 
     .header-rotated {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      padding-top: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      width: 100%;
     }
     .header-rotated .left,
     .header-rotated .right {
@@ -89,7 +94,17 @@
       width: 25%;
     }
     .header-rotated .right { text-align: right; }
-    .header-rotated .center { text-align: center; flex: 1; }
+    .header-rotated .center { 
+      text-align: center; 
+      flex: 1; 
+      padding: 0 10px;
+    }
+    .header-rotated .center h1 {
+      font-size: 18px;
+      line-height: 1.2;
+      word-wrap: break-word;
+      hyphens: auto;
+    }
 
     .consent-text {
       font-size: 11px;
