--- a/figurGrundS/index.html
+++ b/figurGrundS/index.html
@@ -245,6 +245,16 @@ async function initializePage() {
       window.edulogApi.showLoadingScreen();
     }
     
+    // Check if we should show content (authentication check)
+    const shouldShow = await window.edulogApi.shouldShowContent();
+    if (!shouldShow) {
+      if (window.edulogApi) {
+        window.edulogApi.hideLoadingScreen();
+        window.edulogApi.hidePageContent();
+      }
+      return;
+    }
+    
     // Fetch data from API
     if (window.figurGrundSApi) {
       const apiData = await window.figurGrundSApi.fetchData();
